bugfix(ui): home text & icon collapse in small screen.
* added home text & icon inside span tag.
* inline css with nowrap white-space.

--- a/invenio_theme_tugraz/assets/semantic-ui/less/invenio_theme_tugraz/header.less
+++ b/invenio_theme_tugraz/assets/semantic-ui/less/invenio_theme_tugraz/header.less
@@ -248,3 +248,7 @@ svg:not(:root) {
 .inline-elements{
   display: flex;
 }
+
+span.home-inline{
+  white-space: nowrap;
+}
